--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       100% { transform: translateX(-100%); }
     }
 
+    @keyframes gridMove {
+      0% { background-position: 0 0; }
+      100% { background-position: 40px 40px; }
+    }
+
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
@@ -30,13 +35,43 @@
       color: #fff;
     }
 
-    h1 {
+    .heading-container {
+      position: relative;
+      display: inline-block;
+      margin: 0 auto;
+      width: 100%;
       text-align: center;
+    }
+
+    h1 {
+      position: relative;
+      z-index: 1;
       padding: 1rem;
       font-size: 2rem;
       animation: vaporwaveFade 3s infinite;
       color: #fff;
       text-shadow: 0 0 5px #000, 0 0 15px #000;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 0.5rem;
+      display: inline-block;
+    }
+
+    .heading-container::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        linear-gradient(45deg, transparent 49%, #ff00f2 49%, #ff00f2 51%, transparent 51%) 0 0 / 20px 20px,
+        linear-gradient(-45deg, transparent 49%, #00ffe7 49%, #00ffe7 51%, transparent 51%) 0 0 / 20px 20px,
+        linear-gradient(to bottom right, #8a00a2, #310061);
+      opacity: 0.7;
+      animation: gridMove 10s linear infinite;
+      box-shadow: 0 0 20px #ff00f2, 0 0 30px #00ffe7;
+      z-index: 0;
+      border-radius: 1rem;
     }
 
     h2.vape-heading {
@@ -62,7 +97,7 @@
       display: flex;
       flex-direction: row;
       gap: 2rem;
-      animation: scroll 64s linear infinite;
+      animation: scroll 32s linear infinite;
       white-space: nowrap;
     }
 
@@ -256,6 +291,12 @@
     @media (max-width: 600px) {
       h1 {
         font-size: 1.5rem;
+        padding: 0.75rem;
+      }
+
+      .heading-container::before {
+        background-size: 15px 15px;
+        box-shadow: 0 0 10px #ff00f2, 0 0 15px #00ffe7;
       }
 
       h2.vape-heading {
@@ -267,7 +308,7 @@
       }
 
       .scrolling-text-container {
-        animation: scroll 48s linear infinite;
+        animation: scroll 24s linear infinite;
       }
 
       .filter-header {
@@ -353,7 +394,9 @@
   </style>
 </head>
 <body>
-  <h1>⚡ STAS_VAPE ⚡</h1>
+  <div class="heading-container">
+    <h1>⚡ STAS_VAPE ⚡</h1>
+  </div>
   <div class="scrolling-text">
     <div class="scrolling-text-container">
       <p>✅ Стас отвечает быстрее молнии — ты ещё не подумал, а он уже с ответом</p>
@@ -406,7 +449,6 @@
       <option value="15000">15000</option>
       <option value="20000">20000</option>
       <option value="25000">25000</option>
-      <optionSame as before, continuing the pattern...>
       <option value="30000">30000</option>
       <option value="40000">40000</option>
     </select>
